recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:10: error: not found: value lenght
			avance(lenght)
                               ^